--- a/vercel.json
+++ b/vercel.json
@@ -3,22 +3,13 @@
     "builds":[
         {
             "src":"office_emp_proj/wsgi.py",
-            "use":"@vercel/python",
-            "config":{"maxLambdaSize":"15mb","runtime":"python3.9"}
-        },
-        {
-            "src":"build_files.sh",
-            "use":"@vercel/static-build",
-            "config":{
-                "distDir":"staticfiles_build"
-            }
-        }
+            "use":"@vercel/python"
+         }
+         
+        
     ],
     "routes":[
-        {
-            "src":"/static(.*)",
-            "dest":"/static/$1"
-        },
+         
         {
             "src":"/(.*)",
             "dest":"office_emp_proj/wsgi.py"
