--- a/vercel.json
+++ b/vercel.json
@@ -8,10 +8,8 @@
         },
         {
             "src":"build_files.sh",
-            "use":"@vercel/static-build",
-            "config":{
-                "distDir":"staticfiles_build"
-            }
+            "use":"@vercel/static-build"
+            
         }
     ],
     "routes":[
