--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,15 @@
 {
-    "version":2,
+    
     "builds":[
         {
             "src":"office_emp_proj/wsgi.py",
             "use":"@vercel/python",
-            "config":{"maxLambdaSize":"15mb","runtime":"python3.9"}
-        },
-        {
-            "src":"build_files.sh",
-            "use":"@vercel/static-build"
-            
+            "config":{"maxLambdaSize":"15mb"}
         }
+         
     ],
     "routes":[
-        {
-            "src":"/static(.*)",
-            "dest":"/static/$1"
-        },
+         
         {
             "src":"/(.*)",
             "dest":"office_emp_proj/wsgi.py"
